Fix order in donations query

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
   </div>
 
   <div id="user_donations">
-    <%= render @user.donations %>
+    <%= render @user.donations.sorted %>
   </div>
 
   <div id="user_projects" style="display: none">
