Simple version of histogram of donations per user

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -327,7 +327,8 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
 .user_page header img { vertical-align: middle; position: absolute; top: 0; left: 0; }
 #donations_last_month { position: absolute; top: 25px; left: 300px; }
 #donations_last_month small { display: block}
-#donations_overall { position: absolute; top: 25px; left: 450px; }
+#donations_overall { position: absolute; top: 25px; left: 400px; }
+#donations_chart { position: absolute; top: 22px; left: 550px; }
 #donations_last_month, #donations_overall { font-size: 14px; }
 #user_nav { margin: 20px 0;}
 #edit_your_profile { float: right; }
