--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -19,4 +19,11 @@
       <% end %>
     <% end %>
   </div>
+
+  <div id="donations_chart"></div>
+
+  <script type="text/javascript">
+    $("#donations_chart").sparkline(<%= @user.chart_data(current_user) %>, { type: 'bar', barColor: '#565631', width: 100, barWidth: 9 });
+  </script>
+
 </header>
