--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -353,7 +353,7 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
       font-size: .75em;
       text-transform: uppercase;
 
-      a {
+      span {
         display: inline-block;
         margin: 0 0 0 1em;
       }
