--- a/app/views/pages/_about.es.html.erb
+++ b/app/views/pages/_about.es.html.erb
@@ -4,8 +4,6 @@
 
 	<h1><%= title t('metas.about.title') %></h1>
 
-	<h2>Qué, y por qué</h2>
-
-  <p>En castellano ... </p>
+	<p>Traducción pendiente. <%= link_to 'Echa un vistazo a la versión en inglés', about_path(:locale => 'en') %>, o <%= link_to 'contribuye con tu traducción!', 'https://github.com/furilo/trackdons/wiki/Contribute-your-language' %></p>
 
 </section>
