--- a/app/views/pages/_about.en.html.erb
+++ b/app/views/pages/_about.en.html.erb
@@ -30,7 +30,18 @@
   <p>Currently not. Hey we could even ask for donations! But actually this is only a learning excercise in computer programming, and a kind of experiment to see if this idea even makes any sense.</p>
 
   <h3>Who is behind TrackDons?</h3>
-  <p>This is a pet project started by Álvaro Ortiz (<a href="http://www.twitter.com/@furilo">@furilo</a>). Jorge Sancha (<a href="http://www.twitter.com/@jorgesancha">@jorgesancha</a>) and Fernando Blat (<a href="http://www.twitter.com/@ferblape">@ferblape</a>) were asked if this was a goog enough idea to contribute, and they decided it was.</p>
+  <p>This is a pet project started by Álvaro Ortiz (<a href="http://www.twitter.com/@furilo">@furilo</a>). Fernando Blat (<a href="http://www.twitter.com/@ferblape">@ferblape</a>) and Jorge Sancha (<a href="http://www.twitter.com/@jorgesancha">@jorgesancha</a>) were asked if this was a good enough idea to contribute, and they decided it was. Even more, the idea is that this becomes an open community project. Contributions of various kinds are welcome. You can start in our <a href="http://github.com/furilo/trackdons">Github repo</a>.</p>
+
+  <p>It feels weird to talk about the future when we know how difficult it is to grow any project and haven’t hardly started (so the most probable outcome is that all this will be abandoned quickly), but if someone likes TrackDons’ idea and thinks about contributing, that someone might ask herself: what can I expect? What the heck is this community thing? If I contribute will someone be able to make money with this? </p>
+
+  <p>So some basic ideas to address this legitimate concerns: </p>
+
+  <ul>
+    <li>Open project: code is and will always be open. All that you contribute will be subjected to that license, that is, will be equally open and reusable. User content will belong to each user, and we’ll make it easy to be able to take it with you as easily as possible.</li>
+    <li>Non-profit: although the priority now is to just create something useful for us and, hopefully, for the projects, we have some ideas related with generating revenues that eventually will support TrackDons’ own development (being the first one, you guessed it: donations!). Might this day arrive, we’ll be happy to distribute resources between all those that are contributing.</li>
+  </ul>
+
+  <p>Any question, write to lets@trackdons.org</p>
 
   <h3>Can I export my data?</h3>
   <p>You will (I haven't got time to do it yet, but my plan is to expose that info so you other applications can consume it, as well as you being able to export a CSV). Want to help?</p>
