Rewrote a few sentences and corrected a few errors to quench my guilt of not having contributed much lately...

--- a/app/views/pages/_about.en.html.erb
+++ b/app/views/pages/_about.en.html.erb
@@ -6,45 +6,42 @@
 
 	<h2>What and why</h2>
 
-  <p>TrackDons is a simple tool to keep track of the projects you have donated to.  It lets remind you which projects have you donated to and when (and if you should donate again), and it encourages you to share the donationsyou have made as a way of inspiring your friends to donate to this or other projects in need.</p>
+  <p>TrackDons is a simple tool to help you keep track of the projects you donate to. It will help you remember which projects you have donated to and when (and if you should donate again), and it encourages you to make your donations public as a way of inspiring your friends to donate to the same project or others in need.</p>
 
-  <p>Many great things in the world wouldn't have been created with the desinterested support of people who believe in a certain cause. There are different countries with different levels of commitment to altruist causes, but we believe that the Internet enables a new generation of micro-altruists (see Kickstarter) who can make that lots of smaller projects get a sustainable stream of incomes to maintain their operations, without the need of searching a commercial business model (hi all econmy beleivers who have just).</p>
+  <p>Many great things in the world would not have been created without the disinterested support of people who believe in a certain cause. Different countries have different levels of commitment to altruist causes, but we believe that the Internet enables a new generation of micro-altruists (see Kickstarter) who can ensure that lots of smaller projects get a sustainable stream of income to keep their operations going, without needing to find a commercial business model.</p>
 
-  <p>We also believe that we usually donate almost by accident: when we are prompted to do it; and that donations are something extraordinary. We pay the subscription to our gym or the accesories for our bike when they wear out, but only donate to that fantastic community site or grassroots project only once in a while?</p>
+  <p>We believe that normally we donate almost by accident, when we are prompted to do it, and that donations are still rare. We pay the subscription to our gym or the accesories for our bike when they wear out, but only donate to that fantastic community site or grassroots project once in a while?</p>
 
   <p>As a long term goals, we wonder many other things...</p>
 
   <ul>
-    <li>if donation based incomes can become a respectable business model (ie. making subscription models for digital ventures attractive, with enough volume, and )</li>
+    <li>if donation based income can become a respectable business model (ie. making subscription models for digital ventures attractive, with enough volume, etc.)<li>
     <li>if TrackDons gets to accumulate enough data, it will be fun to see what patterns exist regarding donations</li>
   </ul>
 
-
-
   <h2>Some other questions</h2>
 
-  <h3>How different is a subscription for a site than a donation?</h3>
-  <p>It isn't. We are currently thinking how we should tackly this issue (also, did you notice that when I face a problem we use the plural form?)</p>
+  <h3>Is there a difference between a subscription for a site and a donation?</h3>
+  <p>There isn't. We are currently thinking how we should tackle this issue (also, did you notice that when I face a problem we use the plural form?)</p>
 
   <h3>Does TrackDons have a business model?</h3>
-  <p>Currently not. Hey we could even ask for donations! But actually this is only a learning excercise in computer programming, and a kind of experiment to see if this idea even makes any sense.</p>
+  <p>Currently not. Hey, we could even ask for donations! But actually this is only a learning excercise in computer programming, and kind of an experiment to see if this idea even makes any sense.</p>
 
   <h3>Who is behind TrackDons?</h3>
   <p>This is a pet project started by Álvaro Ortiz (<a href="http://www.twitter.com/@furilo">@furilo</a>). Fernando Blat (<a href="http://www.twitter.com/@ferblape">@ferblape</a>) and Jorge Sancha (<a href="http://www.twitter.com/@jorgesancha">@jorgesancha</a>) were asked if this was a good enough idea to contribute, and they decided it was. Even more, the idea is that this becomes an open community project. Contributions of various kinds are welcome. You can start in our <a href="http://github.com/furilo/trackdons">Github repo</a>.</p>
 
-  <p>It feels weird to talk about the future when we know how difficult it is to grow any project and haven’t hardly started (so the most probable outcome is that all this will be abandoned quickly), but if someone likes TrackDons’ idea and thinks about contributing, that someone might ask herself: what can I expect? What the heck is this community thing? If I contribute will someone be able to make money with this? </p>
+  <p>It feels weird to talk about the future when we know how difficult it is to grow any project and haven’t hardly started (so the most probable outcome is that all this will be abandoned quickly), but if someone likes TrackDons’ idea and thinks about contributing, that someone might wonder: what can I expect? What the heck is this community thing? If I contribute will someone be able to make money with this? </p>
 
   <p>So some basic ideas to address this legitimate concerns: </p>
-
   <ul>
     <li>Open project: code is and will always be open. All that you contribute will be subjected to that license, that is, will be equally open and reusable. User content will belong to each user, and we’ll make it easy to be able to take it with you as easily as possible.</li>
-    <li>Non-profit: although the priority now is to just create something useful for us and, hopefully, for the projects, we have some ideas related with generating revenues that eventually will support TrackDons’ own development (being the first one, you guessed it: donations!). Might this day arrive, we’ll be happy to distribute resources between all those that are contributing.</li>
+    <li>Non-profit: although the priority now is to just create something useful for us and, hopefully, for the projects, we have some ideas related with generating revenues that eventually will support TrackDons’ own development (the first one being, you guessed it: donations!). Should this day arrive, we’ll be happy to distribute resources between all those that are contributing.</li>
   </ul>
 
   <p>Any question, write to lets@trackdons.org</p>
 
   <h3>Can I export my data?</h3>
-  <p>You will (I haven't got time to do it yet, but my plan is to expose that info so you other applications can consume it, as well as you being able to export a CSV). Want to help?</p>
+  <p>You will. The plan is to expose that info so your other applications can consume it, as well as you being able to export to CSV. Want to help?</p>
 
   <h3>Do you impose some kind of editorial content about what projects can be tracked? (ie. What happens if someone is tracking donations for a venture you consider horrible?)</h3>
   <p>I don't know yet. If some project wants to raise money to fight against same-marriage sex, or that defends violent animal killings such as bullfighting I would not know what I'd do.</p>
