Unclosed list item turned out in an additional bullet with an empty list item.

--- a/app/views/pages/_about.en.html.erb
+++ b/app/views/pages/_about.en.html.erb
@@ -15,7 +15,7 @@
   <p>As a long term goals, we wonder many other things...</p>
 
   <ul>
-    <li>if donation based income can become a respectable business model (ie. making subscription models for digital ventures attractive, with enough volume, etc.)<li>
+    <li>if donation based income can become a respectable business model (ie. making subscription models for digital ventures attractive, with enough volume, etc.)</li>
     <li>if TrackDons gets to accumulate enough data, it will be fun to see what patterns exist regarding donations</li>
   </ul>
 
