Added gem to manage dependencies and fine tuned styles.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,6 +81,8 @@
 	</ul>
 </div>
 
+<%= render 'cookies_eu/cookies_eu' %>
+
 <%= "Locale: #{I18n.locale}" if Rails.env.development? %>
 <%# debug(request) if Rails.env.development? %>
 <%= debug(params) if Rails.env.development? %>
