--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,18 +1,6 @@
 <section class="content_column">
 
-  <h1>New Donation</h1>	
-
-  <% if @donation.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@donation.errors.count, "error") %> prohibited
-        this article from being saved:</h2>
-      <ul>
-      <% @donation.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= error_messages_for @donation %>
 
   <%= render 'donations/form' %>
 
