--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -4,17 +4,7 @@
 
   <%= form_for @project, html: {class: "simple_form"} do |f| %>
 
-    <% if @project.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@project.errors.count, "error") %> prohibited
-          this project from being saved:</h2>
-        <ul>
-          <% @project.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
+    <%= error_messages_for @project %>
 
     <p>
       <%= f.label(:name, t('project')) %><br>
