Translate About page

--- a/app/views/pages/_about.es.html.erb
+++ b/app/views/pages/_about.es.html.erb
@@ -4,6 +4,47 @@
 
 	<h1><%= title t('metas.about.title') %></h1>
 
-	<p>Traducción pendiente. <%= link_to 'Echa un vistazo a la versión en inglés', about_path(:locale => 'en') %>, o <%= link_to 'contribuye con tu traducción!', 'https://github.com/furilo/trackdons/wiki/Contribute-your-language' %></p>
+  <p>TrackDons es una herramienta muy simple para que registres los proyectos a los que donas. Te ayudará a recordar a qué proyectos has donado y cuándo (y si deberías volver a donar), y te anima a hacer tus donaciones públicas, como una forma de insipiración para que tus amigos donen a esos proyectos o a otros.</p>
+
+  <p>Muchas cosas en el mundo no habrían podido ser creadas sin la colaboración desinteresada de la gente que creía en cierta causa. Cada país tiene unos niveles de compromiso diferentes para las causas altruistas, pero nosotros creemos que Internet nos permite una nueva generación de micro-altruísmo (por ejemplo Kickstarter) que puede asegurar que muchos proyectos pequeños consigan una fuente sostenible de ingresos para mantenerser funcionando, sin necesidad de encontrar un modelo de negocio.</p>
+
+  <p>Creemos que normalmente donamos casi por accidente, cuando se nos pide, y que las donaciones no son aún muy habituales. Pagamos la suscripción a nuestro gimnasio o los accesorios de nuestra bici cuando se estropean, ¿y sólo donamos a esa fantástica web o a ese proyecto básico de vez en cuándo?</p>
+
+  <p>Como objetivos a largo plazo, nos imaginamos muchas otras cosas...</p>
+
+  <ul>
+    <li>si unos ingresos basados en donaciones pueden convertirse en un model de negocio sostenible (por ejemplo  haciendo que las suscripciones a productos digitales sean atractivas, con suficiente volument, etc.)</li>
+    <li>si TrackDons logra acumular suficientes datos, sería divertido ver qué patrones de donación existen</li>
+  </ul>
+
+  <h2>Otras preguntas</h2>
+
+  <h3>¿Hay alguna diferencia entre una suscripción a un sitio y una donación?</h3>
+  <p>No la hay. Ahora mismo estamos pensando cómo afrontar este aspecto (por cierto, ¿te has dado cuenta de que cuando enfrento un problema usamos la forma plural?)</p>
+
+  <h3>¿Tiene TrackDons un modelo de negocio?</h3>
+  <p>Ahora mismo no. Pero hey, ¡podríamos pedir donaciones! De hecho esto es un experimento de aprendizaje de programación y para validar si la idea tiene sentido.</p>
+
+  <h3>¿Quién está detrás de TrackDons?</h3>
+  <p>Este es un <em>pet-project</em> empezado por Álvaro Ortiz (<a href="http://www.twitter.com/@furilo">@furilo</a>). Fernando Blat (<a href="http://www.twitter.com/@ferblape">@ferblape</a>) y Jorge Sancha (<a href="http://www.twitter.com/@jorgesancha">@jorgesancha</a>) si les parecía bueno como para colaborar, y decidieron que sí. Aún más, la idea es que se convierta en una proyecto de comunidad abierta. Se aceptan contribuciones de varios tipos. Puedes empezar en nuestro <a href="http://github.com/furilo/trackdons">repositorio de Github</a>.</p>
+
+  <p>Es raro hablar del futuro cuando sabemos lo difícil que es sacar adelante cualquier proyecto que no hemos empezado (así que el resultado más probable es que lo abandonemos todo rápidamente), pero si a alguien le gusta la idea de TrackDons y piensa en contribuír, si alguien se pregunta: ¿qué puedo esperar? ¿Qué diablos es esta cosa de la comunidad? ¿Y si yo contribuyo, habrá alguien haciendo dinero con esto?</p>
+
+  <p>Algunas ideas básicas para intentar responder estas preguntas legítimas:</p>
+  <ul>
+    <li>Proyecto abierto: el código es y siempre será abierto. Todo lo que contribuyas estará sujeto a esa licencia, que será igualmente abierta y reusable. El contenido de los usuarios pertenecerá a cada usuario, y haremos que sea sencillo exportarlo y llevártelo contigo.</li>
+    <li>Sin beneficio: aunque la prioridad ahora es simplemente crear algo útil para nostoros y, ójala, para los proyectos, tenemos algunas ideas sobre cómo generar beneficios que soportarían el desarrollo de TrackDons (el primero es, como habrás imaginado: ¡donaciones!). Cuando llegue ese día, estaremos encantados de distribuír recursos entre todos los que contribuyan.</li>
+  </ul>
+
+  <p>Ante cualquier duda, escribe a lets@trackdons.org</p>
+
+  <h3>¿Puedo exportar mis datos?</h3>
+  <p>Podrás. El plan es exponer esta información para que tú u otras aplicaciones la puedan consumir, al igual que poder exportarlo en formato CSV. ¿Quieres ayudar?</p>
+
+  <h3>¿Imponéis algún tipo de control editorial sobre los proyectos que pueden ser registrados? (por ejemplo, ¿qué ocurre si alguien está registrando donaciones en algo que tú consideras horrible?)</h3>
+  <p>Todavía no lo sé. Si algún proyecto quiere obtener dinero para luchar en contra del matrimonio del mismo sexo, o para defender a los que matan violentamente animales como en los toros no sabría aún qué haría.</p>
+
+  <h3>¿Feedback, preguntas, propuestas?</h3>
+  <p>Escribe a lets@trackdons.org</p>
 
 </section>
