--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,7 @@
  *
  */
 
-// ....
+@import "objects/autocomplete";
 
 /* 
  * 5. Layout
@@ -67,6 +67,7 @@
 @import "vendor/select2";
 @import "vendor/slidebars";
 @import "vendor/tipsy";
+@import "vendor/pikaday";
 
 /* 
 
