--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,8 @@
  */
 
 @import "core/settings";
+@import "core/functions";
+@import "core/mixins";
 @import "core/reset";
 
 /* 
@@ -33,6 +35,8 @@
  */
 
 @import "helpers/clearfix";
+@import "helpers/percent";
+@import "helpers/white-spacing";
 
 /* 
  * 4. Objects
@@ -43,6 +47,7 @@
  *
  */
 
+@import "objects/form-fields";
 @import "objects/autocomplete";
 
 /* 
