--- a/app/assets/stylesheets/objects/_autocomplete.scss
+++ b/app/assets/stylesheets/objects/_autocomplete.scss
@@ -9,31 +9,34 @@
 }
 
 .autocomplete {
-  background-color: #f8f8f8;
+  background-color: $white;
+  border: 1px dashed $main_color;
+  border-top: 0;
+  box-sizing: border-box;
   display: none;
   margin: 0;
+  max-height: 185px;
+  overflow-y: scroll;
   padding: 3px 0;
   position: absolute;
+  top: calc(100% - 1px);
   width: 100%;
 }
 
 .autocomplete-item {
   cursor: pointer;
+  color: $text_color;
   list-style: none;
   margin: 0;
   padding: 5px 7px;
   
-  &:hover {
-    background-color: #ccc;
-  }
-
-  &.is-active {
-    background-color: red;
-    color: #fff;
+  &:hover, &.is-active {
+    background-color: $main_color;
+    color: $white;
   }
 
   a {
-    color: #3d3d3d;
+    color: inherit;
     display: block;
     text-decoration: none;
   }
