--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,7 @@
 @import "helpers/clearfix";
 @import "helpers/percent";
 @import "helpers/white-spacing";
+@import "helpers/layout";
 
 /* 
  * 4. Objects
