--- a/app/views/sandbox/autocomplete.html.erb
+++ b/app/views/sandbox/autocomplete.html.erb
@@ -2,9 +2,12 @@
     <div id="example">
       <h3>AutoComplete Example - json inline</h3>
       <form action="#">
-        <div class="autocomplete-holder sixty percent">
+        <div class="autocomplete-holder sixty percent inline-block">
           <input type="text" placeholder="Select a framework" id="mvc" class="field-text hundred percent"/>
         </div>
+
+        <input type="text" placeholder="Pick a date" id="mvc" class="field-text thirty percent" data-behaviour="datepicker" value="Thu Feb 12 2015"/>
+
       </form>
     </div>
 </div>
