--- a/app/assets/stylesheets/objects/_autocomplete.scss
+++ b/app/assets/stylesheets/objects/_autocomplete.scss
@@ -25,7 +25,7 @@
 
 .autocomplete-item {
   cursor: pointer;
-  color: $text_color;
+  color: $secondary_color;
   list-style: none;
   margin: 0;
   padding: 5px 7px;
