Reload user invitations to don't render the new invitation (which is not in the database)

--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -23,7 +23,7 @@
 
   <% end %>
 
-  <% if current_user.invitations.any? %>
+  <% if current_user.invitations(true).any? %>
 
     <section id="invitations_sent">
 
