--- a/app/assets/stylesheets/core/_settings.scss
+++ b/app/assets/stylesheets/core/_settings.scss
@@ -16,6 +16,7 @@ $secondary_color: #565631; /* dark green */
 $tertiary_color: #E4D6B3;
 
 $white: #fff;
+$caqui: #DFDFB6;
 
 /*
  *
@@ -25,3 +26,4 @@ $white: #fff;
  */
 
 $font-base: 'Raleway', Arial, sans-serif;
+$font-form: Arial, sans-serif;
