--- a/app/assets/stylesheets/objects/_form-fields.scss
+++ b/app/assets/stylesheets/objects/_form-fields.scss
@@ -8,17 +8,108 @@
  *
  */
 
-.field-text {
+.field-text, .field-textarea {
+  @include placeholder(#AEAE9E);
   border: 1px dashed $main_color;
   box-sizing: border-box;
-  font-family: $font-base;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 32px;
-  padding: 4px 8px;
+  font-family: $font-form;
+  font-size: 12px;
+  line-height: 1.5em;
+  padding: 8px;
 
   &:focus {
     outline: none;
     box-shadow: 0 0 2px $main_color;
   }
- }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.8;
+  }
+}
+
+/* Field select */
+
+.field-select {
+    background-color: $caqui;
+    cursor: pointer;
+    display: inline-block;
+    max-width:100%;
+    overflow:hidden;
+    position: relative;
+    vertical-align: middle;
+}
+
+.field-select:hover {
+    background-color: darken($caqui, 10%);
+}
+
+.field-select select {
+    /* Remove select styling */
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: window; /* Ugly Firefox way of doing it */
+    background:none;
+    border: none;
+    color: $secondary_color;
+    cursor: pointer;
+    font-size: 12px;
+    line-height: 1.5em;
+    padding: 9px 14px;
+    /* Make sure the select is wider than the container so we can clip the arrow */
+    width:110%;
+    max-width:110%;
+    min-width:110%;
+}
+
+.field-select select:focus {
+    outline: none;
+}
+
+/* This hides focus around selected option in FF */
+.field-select select:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #000;
+}
+
+/* This hides native dropdown button arrow in IE */
+.field-select select::-ms-expand {
+    display: none;
+}
+
+.field-select.has-caret:after {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #555;
+    content: "";
+    height: 0;
+    pointer-events:none;
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 0;
+    z-index: 1;
+}
+
+/**
+ * Field group
+ * -----------
+ *
+ * For group of elements coupled
+ *
+ * <div class="field-group">
+ *   <input type="text" class="field-group-item" placeholder="Insert you text here">
+ *   <button class="btn-base field-group-item">Confirm</button>
+ * </div>
+ */
+
+.field-group {
+    display: inline-table;
+}
+
+.field-group .field-group-item {
+    display: table-cell;
+    margin:0;
+    vertical-align: middle;
+}
