--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -267,6 +267,24 @@ h2 { font-size: 24px; }
 small { font-size: 11px; }
 hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; width: 100%; }
 
+.big_banner {
+  @extend .content_column;
+  background: #BAC271; 
+  margin-top: -40px;
+  margin-bottom: 2em;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  font-size: 1.15em;
+  line-height: 1.4em;
+
+  big {
+    font-size: 1.2em;
+  }
+  a {
+    color: #565631;
+  }
+}
+
 #share_block { 
   background-color: #D9DAAA; 
   padding: 20px;
