--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -285,6 +285,14 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
   }
 }
 
+a.cta {
+  display: inline-block;
+  padding: .5em 2em;
+  margin: 0 1em;
+  background: $main-color; 
+  color: #FFF;
+}
+
 #share_block { 
   background-color: #D9DAAA; 
   padding: 20px;
