--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,8 @@
 @import "http://fonts.googleapis.com/css?family=Raleway:400,700";
 @import "//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css";
 
+@import "helpers/white-spacing";
+
 $main_color: #7C9200; /* main green */
 $secondary_color: #565631; /* dark green */
 $tertiary_color: #E4D6B3;
@@ -280,17 +282,19 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
   big {
     font-size: 1.2em;
   }
-  a {
-    color: #565631;
-  }
 }
 
 a.cta {
-  display: inline-block;
-  padding: .5em 2em;
-  margin: 0 1em;
   background: $main-color; 
   color: #FFF;
+  display: inline-block;
+  margin: 0 1em;
+  padding: .5em 2em;
+  text-decoration: none;
+  
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 #share_block { 
