Playing with buttons

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
     </p>
 
     <p>
-      <%= t '.get_started' %> <%= link_to t('.track_your_first_donation'), track_donation_path, :class => 'cta' %>
+      <%= t '.get_started' %> <%= link_to t('.track_your_first_donation'), track_donation_path, :class => 'button' %>
     </p>
 
   </section>
